fix: updated ui for new style variant(center aligned) for testimonial section

--- a/store/src/styles/sections/testimonials.scss
+++ b/store/src/styles/sections/testimonials.scss
@@ -194,21 +194,21 @@
 }
 
 .hern-testimonials__container .slick-track .slick-slide > div {
-   padding: 0px 15px;
+   padding: 0px 10px;
 }
 
 .hern-testimonials__container .slick-track {
    display: flex;
    align-items: center;
+   transition: 0.5s;
 }
 
-.hern-testimonials--without-image-center-aligned .hern-testimonials__header {
-   padding-bottom: 20px;
-   > h6 {
-      font-weight: 500;
-      font-size: 36px;
-      line-height: 44px;
-   }
+.hern-testimonials__container
+   .slick-track
+   .slick-slide
+   .slick-active.slick-current {
+   padding: 0px 15px;
+   z-index: 2;
 }
 
 // Navigation Dots Style
@@ -253,6 +253,114 @@
    li.slick-active
    button {
    background-color: #fe8b76;
+}
+
+// Testimonial without image and center aligned
+.hern-testimonials--without-image-center-aligned .slick-list {
+   position: relative;
+   overflow-y: auto;
+   padding: 50px !important;
+   width: 100%;
+}
+.hern-testimonials--without-image-center-aligned .slick-track {
+   position: relative;
+   top: 0;
+   left: 0;
+   display: flex;
+}
+.hern-testimonials--without-image-center-aligned
+   .slick-slide:not(.slick-active) {
+   position: relative;
+   z-index: 997;
+}
+.hern-testimonials--without-image-center-aligned
+   .slick-slide.slick-active:not(.slick-current) {
+   position: relative;
+   z-index: 998;
+   transition: 0.5s;
+}
+.hern-testimonials--without-image-center-aligned
+   .slick-slide.slick-active.slick-current {
+   position: relative;
+   transform: scale(1.2, 1.1) translateY(-6%);
+   z-index: 999;
+   transition: 0.5s;
+   .hern-testimonials--without-image__review__content {
+      font-size: 15px;
+      line-height: 20px;
+   }
+}
+// End
+
+.hern-testimonials--without-image-center-aligned .hern-testimonials__header {
+   padding-bottom: 20px;
+   > h6 {
+      font-weight: 500;
+      font-size: 36px;
+      line-height: 44px;
+   }
+}
+
+.hern-testimonials--without-image-center-aligned
+   .hern-testimonials--without-image__reviews {
+   max-width: unset;
+}
+
+.hern-testimonials--without-image-center-aligned
+   .hern-testimonials--without-image__review {
+   display: flex !important;
+   flex-direction: column;
+   align-items: center;
+   padding: 20px;
+   height: 380px;
+   overflow-y: auto;
+   transition: 0.5s;
+   > :first-child {
+      margin-top: auto;
+   }
+   > :last-child {
+      margin-bottom: auto;
+   }
+   .hern-testimonials--without-image__review__content {
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 22px;
+   }
+   .hern-testimonials--without-image__review__user {
+      font-size: 28px;
+      line-height: 28px;
+   }
+   svg {
+      width: 50px;
+      height: 50px;
+   }
+   @media screen and (max-width: 567px) {
+      height: 357px;
+      .hern-testimonials--without-image__review__content {
+         font-size: 12px !important;
+         line-height: 16px !important;
+      }
+      .hern-testimonials--without-image__review__user {
+         font-size: 16px;
+         line-height: 20px;
+      }
+      svg {
+         width: 30px;
+         height: 30px;
+      }
+   }
+   @media screen and (max-width: 768px) {
+   }
+}
+
+.hern-testimonials--without-image-center-aligned
+   .slick-slide:not(.slick-current)
+   .hern-testimonials--without-image__review {
+   background-color: #fff !important;
+   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+   svg > path {
+      fill: var(--hern-accent) !important;
+   }
 }
 
 @media only screen and (min-width: 400px) {
